[package]
authors = ["vyfor"]
categories = ["compilers", "development-tools", "parser-implementations"]
description = "Kotlin Language Parser (WIP)"
edition = "2021"
keywords = ["kotlin", "language", "parser", "syntax", "ast"]
license = "MIT"
name = "kotlin"
repository = "https://github.com/vyfor/kotlin-parser"
version = "0.0.2"

[lib]
crate-type = ["lib"]

[dependencies]
chumsky = "0.9.3"